Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,8 +38,10 @@ steps:
     command: 'pack'
     configuration: '$(buildConfiguration)'
     packagesToPack: '**/*.csproj'
+    buildProperties: 'build=$(Build.BuildNumber)'
     versioningScheme: 'byBuildNumber'
     nobuild: true
+
 
 - task: PublishBuildArtifacts@1
   inputs:
