--- a/OCTranspo_Net/OCTranspo_Net.csproj
+++ b/OCTranspo_Net/OCTranspo_Net.csproj
@@ -3,6 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>OCTranspo_Net</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageId>killerrin.OCTranspo.Net</PackageId>
+    <Authors>killerrin</Authors>
+    <Company>killerrin</Company>
+    <Product>OCTranspo.Net</Product>
+    <RepositoryUrl>https://github.com/killerrin/OC-Transpo-Net</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageTags>OC Transpo</PackageTags>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
