--- a/OCTranspo_Net/OCTranspo_Net.csproj
+++ b/OCTranspo_Net/OCTranspo_Net.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>OCTranspo_Net</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>killerrin.OCTranspo.Net</PackageId>
     <Authors>killerrin</Authors>
     <Company>killerrin</Company>
