--- a/OCTranspo_Net/OCTranspo_Net.csproj
+++ b/OCTranspo_Net/OCTranspo_Net.csproj
@@ -15,6 +15,10 @@
     <Version>1.0.0.0</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\andre\Documents\GitHub\killerrin\OC-Transpo-Net\OCTranspo_Net\OCTranspo_Net.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
