--- a/OCTranspo_Net/OCTranspo_Net.csproj
+++ b/OCTranspo_Net/OCTranspo_Net.csproj
@@ -16,7 +16,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\andre\Documents\GitHub\killerrin\OC-Transpo-Net\OCTranspo_Net\OCTranspo_Net.xml</DocumentationFile>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
